# hyprstack

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  README.ja.md  README.md  hyprpm.toml
docs/: manual-test-cases.md  query-api-v0.md
include/hyprstack/: hyprland_executor.hpp  hyprland_observer.hpp  plugin_state.hpp  query_command.hpp  stack_dispatcher.hpp  workspace_stack.hpp
include/hyprstack/application/: dispatch_service.hpp  observed_state.hpp  query_service.hpp  stack_store.hpp  state_sync.hpp
include/hyprstack/domain/: stack_types.hpp  workspace_stack.hpp
include/hyprstack/infra/hyprland/: event_bridge.hpp  executor.hpp  observer.hpp
include/hyprstack/interface/: json_renderer.hpp  query_parser.hpp
include/hyprstack/plugin/: plugin_app.hpp
scripts/: hyprctl-live.sh  query.sh  reload.sh  smoke.sh
src/: hyprland_executor.cpp  hyprland_observer.cpp  main.cpp  plugin_state.cpp  query_command.cpp  stack_dispatcher.cpp  workspace_stack.cpp
src/application/: dispatch_service.cpp  plugin_state.cpp  query_service.cpp  stack_store.cpp  state_sync.cpp
src/domain/: workspace_stack.cpp
src/infra/hyprland/: event_bridge.cpp  executor.cpp  observer.cpp
src/interface/: json_renderer.cpp  query_parser.cpp
src/plugin/: entrypoint.cpp  plugin_app.cpp
tests/: plugin_state_test.cpp  query_command_test.cpp  stack_dispatcher_test.cpp  workspace_stack_test.cpp
tests/application/: state_sync_test.cpp
